<resources>
    <string name="app_name">OCBCPay</string>
    <string name="dialog_title">Login error</string>
    <string name="user_does_not_exist">User does not exist. Do you want to register?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="user_exists">User Register Error</string>
    <string name="user_exist">User already exist. Please use forgot password or try with different user name.</string>
    <string name="user_inserted_successful">Registration Successful</string>
    <string name="user_reg_successful">User registration successful.</string>
    <string name="user_name_error">Username cannot be empty!</string>
    <string name="error">User Error</string>
    <string name="pwd_error">Password cannot be empty!</string>
    <string name="pwd_mismatch">Passwords are not identical. Please try again.</string>
    <string name="login_error">Login Failure</string>
    <string name="login_fail_msg">Wrong user name/password. Please try again.</string>
    <string name="title_activity_topup">TopupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="topup_title">User Topup</string>
    <string name="welcome_message">Hello,</string>
    <string name="currentblc_lbl">Your current balance</string>
    <string name="topup_lbl">Topup</string>
    <string name="payto_lbl">Pay to</string>
    <string name="pay_amount">Amount</string>
    <string name="topup">Topup</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="make_transfer">Transfer</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="invalid_amount_msg">Please enter valid amount!</string>
    <string name="topup_max_error">Topup Error</string>
    <string name="topup_max_error_msg">Cannot exceed 1000 USD</string>
    <string name="recipient_error">Recipient Error</string>
    <string name="recipient_error_msg">No recipients. Please add a recipient!</string>
    <string name="successful_transfer">Successfully transferred!</string>
    <string name="pay_debt">Successfully paid the dept</string>
</resources>